# cmumaps

./: .coderabbit.yaml  .dockerignore  .editorconfig  .gitignore  .gitmodules  .markdownlint-cli2.jsonc  .markdownlint.jsonc  .syncpackrc  AGENTS.md  Cargo.toml  LICENSE-MIT  README.md  biome.json  biome.jsonc  cmumaps.code-workspace  hello_world.md  init_submodule.sh  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.txt  ruff.toml  syncpack.config.ts  taplo.toml  tsconfig.json  turbo.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh
.github/: CODEOWNERS  CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: issue_template.md
.github/workflows/: check.yml  ci.yml  deploy-backend.yml  sync.yml
.husky/: commit-msg  pre-commit
app/: .prettierrc  eslint.config.js  package.json  tsconfig.app.json  vite.config.ts
app/src/: App.tsx  FloorDisplay.tsx  Home.tsx  main.tsx  settings.ts  test.ts
apps/data/: README.md  main.py  package.json  pyproject.toml  requirements.txt
apps/dataflow/: README.md  package.json  pyproject.toml  requirements.txt
apps/dataflow/25live/: Dockerfile
apps/dataflow/s3_utils/: s3_client.py  s3_utils.py
apps/dataflow/spring_carnival/: events.py  format_carnival_coord.py
apps/dataflow/src/25live/: Dockerfile
apps/dataflow/src/_25live/: Dockerfile  main.py
apps/dataflow/src/clients/: __init__.py  _api_client.py  _s3_client.py  api_client.py  get_clerk_token.py  s3_client.py
apps/dataflow/src/deserializer/: __init__.py  database_population.py  main.py
apps/dataflow/src/deserializer/tables/: __init__.py  _alias.py  _building.py  _floor.py  alias.py  building.py  edge.py  floor.py  node.py  room.py
apps/dataflow/src/generator/: __init__.py  find_neighbors.py  generate_code_simplified.py  sampler.py
apps/dataflow/src/lint/: __init__.py
apps/dataflow/src/linter/: __init__.py
apps/dataflow/src/logger/: __init__.py  _app_logger.py  _components.py  _config.py  _constants.py  _utils.py  app_logger.py  components.py  config.py  constants.py  utils.py
apps/dataflow/src/models/: __init__.py  _common.py  buildings.py  floorplans.py  graph.py  placements.py
apps/dataflow/src/s3_utils/: post_create.py  s3_example.py
apps/dataflow/src/scraper/: __init__.py
apps/dataflow/src/scraper/esim/: __init__.py  add_fms_id.py  arc_gis_query.py  building_pipeline.py  fetch_osm_data.py  generate_building_info_map.py  get_osm_entrance_info.py  osm_building_to_json.py  sign_abbrev_mapping.py
apps/dataflow/src/scraper/fms/: __init__.py  download_svg_from_s3.py  driver.py  get_all_svg.py  run_fms_scraper.py  s3_utils.py  upload_svg_to_s3.py
apps/dataflow/src/scraper/osm/: __init__.py  osm_to_osm_outside_json.py
apps/dataflow/src/spring_carnival/: event_occurrences.py  tracks.py
apps/dataflow/src/utils/: __init__.py  s3_utils.py
apps/rust-server/: .gitignore  Cargo.toml  Dockerfile  README.md  openapi.d.ts  openapi.yaml  package.json
apps/rust-server/search/: Cargo.toml
apps/rust-server/search/src/: build.rs  parse.rs  rank.rs  search.rs  types.rs
apps/rust-server/server/: Cargo.toml
apps/rust-server/server/src/: main.rs
apps/server/: .gitignore  .prettierrc  Dockerfile  README.md  eslint.config.js  index.ts  package.json  server.ts  tsconfig.json  tsoa.json  vite.config.ts
apps/server/aws-lambda/alpha-search/: Cargo.toml  README.md  build.rs
apps/server/aws-lambda/alpha-search/assets/: searchDocuments.json
apps/server/aws-lambda/alpha-search/search/: Cargo.toml
apps/server/aws-lambda/alpha-search/search/src/: lib.rs  types.rs
apps/server/aws-lambda/alpha-search/src/: http_handler.rs  main.rs
apps/visualizer/: .prettierrc  README.md  index.html  package.json  tsconfig.json  vercel.json  vite.config.ts
apps/web/: README.md  eslint.config.js  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
docker/: docker-compose.yml
governance/: README.md  cmumaps.toml  requirements.txt
governance/scripts/: sync.py  sync_clerk.py  sync_github.py  sync_keycloak.py  utils.py
infrastructure/: .gitignore  cdk.context.json  cdk.json  package.json
infrastructure/lib/: ci-stack.ts  infrastructure-stack.ts  server-stack.ts
scripts/: README.md  config.sh  generate-biome-rules.ts  get_classroom_tech_instructions.py  post-create.sh  railway-push.sh  secrets-pull.sh  secrets-push.sh  setup.sh  vault-pull.sh  vault-push.sh  vercel-push.sh
scripts/biome/: check-biome-config.ts  check-biome-rules.ts  check-config.ts  generate-biome-rules.ts  generate-rules.ts  write-biome-config.ts  write-config.ts
scripts/secrets/: config.sh
server/: .gitignore  Dockerfile  eslint.config.js  index.ts  package.json  tsconfig.json
server/controllers/: buildingController.ts  edgeController.ts  floorController.ts  nodeController.ts  poiController.ts  roomController.ts
server/errors/: error.ts  errorHandler.ts
server/middleware/: authMiddleware.ts  notFoundHandler.ts
server/prisma/: schema.prisma
server/routes/: buildingRoutes.ts  edgeRoutes.ts  floorRoutes.ts  nodeRoutes.ts  poiRoutes.ts  roomRoutes.ts
server/services/: buildingService.ts  edgeService.ts  floorService.ts  nodeService.ts  (+3 more)
shared/: errorCode.ts  package.json  types.ts  vite.config.ts  webSocketTypes.ts
src/: App.tsx
(+698 files in other folders)
