[project]
name = "dataflow"
version = "0.1.0"
description = "Responsible for handling data flow for CMU Maps"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "clerk-backend-api>=4.2.0",
  "colorama>=0.4.6",
  "minio>=7.2.20",
  "pyjwt>=2.10.1",
  "python-dotenv>=1.2.1",
  "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.11",
    "ty>=0.0.10",
    "types-colorama>=0.4.15.20250801",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "src/25live",
  "src/auth_utils",
  "src/deserializer",
  "src/s3_utils",
  "src/serializer",
  "src/spring_carnival",
  "src/lint",
]

[project.scripts]
populate-database = "deserializer:main"
lint = "lint:main"

[tool.mypy]
check_untyped_defs = true

# Supported rules https://github.com/charliermarsh/ruff/#supported-rules
[tool.ruff]
lint.select = ["ALL"]

lint.ignore = [
  # Do not require documentation for every single function/method.
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  # Ignore rules with lower code number when they are at conflict
  "D203",
  "D212",
  # May cause conflicts when used with the formatter
  "COM812",
]
