[project]
name = "dataflow"
version = "0.1.0"
description = "Responsible for handling data flow for CMU Maps"
readme = "README.md"
requires-python = ">=3.10,<3.14"  # TODO: Remove <3.14 constraint when pyarrow has 3.14 wheels
dependencies = [
  "arcgis>=2.4.0",
  "colorama>=0.4.6",
  "minio>=7.2.20",
  "pyjwt>=2.10.1",
  "python-dotenv>=1.2.1",
  "requests>=2.32.5",
]

[dependency-groups]
dev = [
  "mypy>=1.19.1",
  "ruff>=0.14.11",
  "ty>=0.0.10",
  "types-colorama>=0.4.15.20250801",
  "types-requests>=2.32.4.20260107",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "src/_25live",
  "src/cleaner",
  "src/clients",
  "src/deserializer",
  "src/linter",
  "src/logger",
  "src/processor",
  "src/scraper",
  "src/serializer",
]

[project.scripts]
populate-database = "deserializer:main"
process-25live = "_25live:main"
lint = "linter:main"
scrape-fms = "scraper.fms:main"

# Supported rules https://github.com/charliermarsh/ruff/#supported-rules
[tool.ruff]
lint.select = ["ALL"]

# Upgrade all non-error rules to "error"
[tool.ty.rules]
# Defaults: warn
ambiguous-protocol-member = "error"
deprecated = "error"
ignore-comment-unknown-rule = "error"
invalid-ignore-comment = "error"
possibly-missing-attribute = "error"
possibly-missing-implicit-call = "error"
redundant-cast = "error"
undefined-reveal = "error"
unresolved-global = "error"
unsupported-base = "error"
unused-ignore-comment = "error"
useless-overload-body = "error"

# Defaults: ignore
division-by-zero = "error"
possibly-missing-import = "error"
possibly-unresolved-reference = "error"
