[package]
name = "alpha-search"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.13.0"

tokio = { version = "1", features = ["macros"] }

search = { path = "search" }
bincode = "1.3"
serde_json = "1.0.135"
include_assets = "1.0.0"
serde = "1.0"


[build-dependencies]
serde_json = "1.0.135"
serde = { version = "1.0", features = ["derive"] }
search = { path = "search" }
bincode = "1.3"

